# liquidation-bot

./: .gitignore  ARCHITECTURE.md  AUDIT.md  Cargo.toml  LOCAL_TESTING.md  PHASE_1_REPORT.md  PHASE_2_REPORT.md  PHASE_3_REPORT.md  REVIEW.md  STATUS.md  STRATEGY.md  Surfpool.toml  TODO.md  config.toml  docker-compose.yml
analysis/: sanity.sql
crates/backfill/: Cargo.toml
crates/backfill/src/: block_fetcher.rs  config.rs  main.rs  sig_fetcher.rs  tx_parser.rs
crates/backfill/tests/: local_integration.rs  validation.rs
crates/indexer-core/: Cargo.toml
crates/indexer-core/src/: enrichment.rs  events.rs  lib.rs  progress.rs  writer.rs
crates/processors/: Cargo.toml
crates/processors/src/: common.rs  jupiter_lend.rs  kamino.rs  lib.rs  marginfi.rs  save.rs
data/: jupiter_lend_jan_2026.csv  kamino_jan_2026.csv  marginfi_jan_2026.csv  save_jan_2026.csv  solana_daily_prices_jan_2026.csv
decoders/jupiter-lend-flashloan/: Cargo.toml
decoders/jupiter-lend-flashloan/src/: lib.rs
decoders/jupiter-lend-lending/: Cargo.toml
decoders/jupiter-lend-lending/src/: lib.rs
decoders/jupiter-lend-liquidity/: Cargo.toml
decoders/jupiter-lend-liquidity/src/: lib.rs
decoders/jupiter-lend-oracle/: Cargo.toml
decoders/jupiter-lend-oracle/src/: lib.rs
decoders/jupiter-lend-reward/: Cargo.toml
decoders/jupiter-lend-reward/src/: lib.rs
decoders/jupiter-lend-vaults/: Cargo.toml
decoders/jupiter-lend-vaults/src/: instructions.rs  lib.rs
decoders/jupiter-lend-vaults/tests/: fixture_roundtrip.rs
decoders/klend/: Cargo.toml
decoders/klend/src/: instructions.rs  lib.rs
decoders/klend/tests/: fixture_roundtrip.rs
decoders/marginfi-v2/: Cargo.toml
decoders/marginfi-v2/src/: instructions.rs  lib.rs
decoders/marginfi-v2/tests/: fixture_roundtrip.rs
decoders/save/: Cargo.toml
decoders/save/src/: accounts.rs  instructions.rs  lib.rs
decoders/save/tests/: fixture_roundtrip.rs
idls/save/: README.md
migrations/: 001_create_liquidations.sql
research/: SUMMARY.md  jupiter_lend.md  kamino.md  liquidation_volumes_solana.md  liquidator_profitability.md  marginfi.md  save.md
schema/: MODEL.md
schema/migrations/: 001_initial_schema.sql
scripts/: clickhouse-shell.sh  download_dune_sigs.py  enrich_prices.py  enrich_prices_birdeye.py  fetch_liquidation_fixtures.py  fetch_sigs_rpc.py  local-test.sh  query-examples.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/decoder/: mod.rs
src/flash_loan/: init.rs  jupiter.rs  kamino.rs  mod.rs
src/grpc/: mod.rs
src/jito/: mod.rs
src/liquidator/: executor.rs  flash_loan.rs  instructions.rs  mod.rs  profitability.rs  reserve.rs
src/obligation/: health.rs  mod.rs  positions.rs
src/protocols/: jupiter_lend.rs  jupiter_lend_instructions.rs  kamino.rs  marginfi.rs  marginfi_bank.rs  marginfi_instructions.rs  mod.rs  save.rs  save_instructions.rs
src/protocols/jupiter_lend/: instructions.rs  mod.rs
src/protocols/kamino/: decoder.rs  health.rs  instructions.rs  mod.rs  positions.rs  reserve.rs
src/protocols/marginfi/: bank.rs  instructions.rs  mod.rs
src/protocols/save/: instructions.rs  mod.rs
src/risk/: mod.rs
tests/: cross_validate_health.rs  live_validation.rs  surfpool_liquidation.rs
tests/fixtures/jupiter-lend/: 2ep3ZfU3QpGi.json  5yQbqt8i5MKy.json  SVSR2bLPvARr.json  synth_1.json  synth_2.json  synth_3.json
tests/fixtures/kamino/: 2UJsasJPawD5.json  2gWWHY1WuY6Q.json  37kD6gBybmYQ.json
tests/fixtures/marginfi/: 5H37M1kpRi9d.json  65DDTHjynfZZ.json  qsQPvqyWhyez.json  synth_1.json  synth_2.json  synth_3.json
tests/fixtures/save/: 4fgSePTLZjSe.json  51QSzz8JgacQ.json  umQetzW6NtfD.json
tests/integration/: mod.rs  surfpool_helpers.rs
tests/surfpool-tests/: Cargo.toml
tests/surfpool-tests/src/: main.rs
ts-reference/: package.json  snapshot-obligations.ts  tsconfig.json  validate-health.ts
