[package]
name = "liquidation-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Solana core
solana-sdk = "2.2"
solana-client = "2.2"

# gRPC streaming (Yellowstone / Geyser)
yellowstone-grpc-client = "13.0.0"
yellowstone-grpc-proto = "12.1.0"

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
bs58 = "0.5"
base64 = "0.22"
sha2 = "0.10"
borsh = "1"
tokio-stream = "0.1"
dotenvy = "0.15"
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }
spl-token = { version = "8", features = ["no-entrypoint"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"
base64 = "0.22"
solana-account-decoder = "2.2"
sha2 = "0.10"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

# surfpool-tests is a standalone project in tests/surfpool-tests/
# (separate Cargo.lock because surfpool uses solana 3.x, we use 2.x)

[lib]
name = "liquidation_bot"
path = "src/lib.rs"
