[workspace]
members = [
    ".",
    "decoders/klend",
    "decoders/jupiter-lend-vaults",
    "decoders/jupiter-lend-liquidity",
    "decoders/jupiter-lend-lending",
    "decoders/jupiter-lend-oracle",
    "decoders/jupiter-lend-flashloan",
    "decoders/jupiter-lend-reward",
    "decoders/marginfi-v2",
    "decoders/save",
    "crates/indexer-core",
    "crates/processors",
    "crates/backfill",
]
resolver = "2"

[workspace.dependencies]
borsh = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "2.2"
solana-client = "2.2"
solana-transaction-status = "2.2"
sha2 = "0.10"
bs58 = "0.5"
base64 = "0.22"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
clickhouse = { version = "0.13", features = ["inserter"] }
dotenvy = "0.15"

[package]
name = "liquidation-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Solana core
solana-sdk = { workspace = true }
solana-client = "2.2"

# gRPC streaming (Yellowstone / Geyser)
yellowstone-grpc-client = "13.0.0"
yellowstone-grpc-proto = "12.1.0"

# Serialization & config
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Misc
bs58 = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
borsh = { workspace = true }
tokio-stream = "0.1"
dotenvy = "0.15"
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }
spl-token = { version = "8", features = ["no-entrypoint"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = { workspace = true }
base64 = { workspace = true }
solana-account-decoder = "2.2"
sha2 = { workspace = true }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

# surfpool-tests is a standalone project in tests/surfpool-tests/
# (separate Cargo.lock because surfpool uses solana 3.x, we use 2.x)

[lib]
name = "liquidation_bot"
path = "src/lib.rs"
