[package]
name = "indexer-core"
version = "0.1.0"
edition = "2024"
description = "Core types, ClickHouse writer, and transaction enrichment for the liquidation indexer."

[dependencies]
# Workspace deps
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
clickhouse = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { workspace = true }

