[package]
name = "jupiter-lend-vaults-decoder"
version = "0.1.0"
edition = "2024"
description = "Jupiter Lend Vaults program decoder — contains the liquidate instruction."

[dependencies]
borsh = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
anyhow = { workspace = true }
bs58 = { workspace = true }
serde_json = { workspace = true }

