[package]
name = "klend-decoder"
version = "0.1.0"
edition = "2021"
description = "Kamino Lend (klend) instruction decoder for the liquidation indexer."

[dependencies]
borsh = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
anyhow = { workspace = true }
bs58 = { workspace = true }
serde_json = { workspace = true }
