[package]
name = "surfpool-tests"
version = "0.1.0"
edition = "2021"
publish = false

# This crate uses solana 3.x (via surfpool-core) and CANNOT depend on
# the main liquidation-bot crate (which uses solana 2.x). Instead it
# duplicates the minimal forging/health logic needed for testing.
#
# The test flow:
# 1. Fetch real accounts from mainnet via solana-rpc-client (3.x)
# 2. Forge them in memory (pure byte manipulation, no SDK types needed)
# 3. Load into SurfnetSvm (in-process LiteSVM)
# 4. Build and submit transactions
# 5. Verify they land or fail with expected errors

[dependencies]
# Surfpool (solana 3.x ecosystem)
surfpool-core = { git = "https://github.com/solana-foundation/surfpool", tag = "v1.1.2", default-features = false }
surfpool-types = { git = "https://github.com/solana-foundation/surfpool", tag = "v1.1.2" }
crossbeam-channel = "0.5"

# Solana 3.x split crates (compatible with surfpool)
solana-pubkey = "3.0"
solana-keypair = "3.1"
solana-signer = "3.0"
solana-signature = "3.1"
solana-message = "3.1"
solana-transaction = "3.1"
solana-system-interface = "3.1"
solana-clock = "3.0"
solana-epoch-info = "3.1"
solana-account = "3.1"
solana-account-decoder-client-types = "3.1"
solana-rpc-client = "3.1"
solana-rpc-client-api = "3.1"
solana-commitment-config = "3.0"
solana-hash = "3.1"
solana-client = "3.1"

# Shared
anyhow = "1"
base64 = "0.22"
sha2 = "0.10"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
